updateLogout
