# internal/route/AuhtRoute.go
@@ -2,7 +2,6 @@ package route
 
 import (
 	"github.com/api/internal/controller"
-	"github.com/api/internal/middleware"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -12,7 +11,5 @@ func AuhtRoute(r fiber.Router) {
 	app.Post("/", controller.AuthController)
 	app.Post("/register", controller.RegisterController)
 	app.Put("/register/image/:id", controller.RegisterAvatar)
-	appme := r.Group("/auth")
-	appme.Use(middleware.APIKeyAuthMiddlewareMePeminjam)
-	appme.Get("/me", controller.MePeminjamController)
+
 }
